; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_wfcopy.c_IsValidChar.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_wfcopy.c_IsValidChar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IsValidChar(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %15 [
    i32 131, label %9
    i32 137, label %9
    i32 133, label %11
    i32 135, label %11
    i32 134, label %11
    i32 136, label %11
    i32 132, label %13
    i32 128, label %13
    i32 139, label %13
    i32 138, label %13
    i32 130, label %13
    i32 129, label %13
  ]

9:                                                ; preds = %3, %3
  %10 = load i32, i32* %7, align 4
  store i32 %10, i32* %4, align 4
  br label %19

11:                                               ; preds = %3, %3, %3, %3
  %12 = load i32, i32* @FALSE, align 4
  store i32 %12, i32* %4, align 4
  br label %19

13:                                               ; preds = %3, %3, %3, %3, %3, %3
  %14 = load i32, i32* %6, align 4
  store i32 %14, i32* %4, align 4
  br label %19

15:                                               ; preds = %3
  %16 = load i32, i32* %5, align 4
  %17 = icmp sgt i32 %16, 129
  %18 = zext i1 %17 to i32
  store i32 %18, i32* %4, align 4
  br label %19

19:                                               ; preds = %15, %13, %11, %9
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
